# stackit

./: .gitignore  .golangci.yml  .goreleaser.yml  .stackit.yaml  AGENTS.md  Brewfile  CONTRIBUTING.md  MISE.md  PLAN.md  Procfile.dev  README.md  go.mod  go.sum  justfile  mise.toml  package.json  pnpm-lock.yaml
.claude/rules/: code-style.md  documentation.md  package-dependencies.md  safety-invariants.md  stackit-workflow.md  testing.md  tui-architecture.md  tui-best-practices.md  validation.md  web-development.md
.next/: trace  trace-build
doc/: .gitignore  README.md  mkdocs.yml  pyproject.toml
doc/hooks/: cliref.py  configref.py  replace.py
doc/includes/: config-reference.md
doc/overrides/: main.html
doc/src/: index.md  robots.txt
doc/src/cli/: config.md  hooks.md  index.md  reference.md  shell.md
doc/src/community/: contributing.md  faq.md  index.md
doc/src/css/: custom.css
doc/src/guide/: claude-integration.md  concepts.md  index.md  team-workflows.md  troubleshooting.md  workflows.md  worktrees.md
doc/src/integrations/: claude.md  git-hooks.md  github.md  index.md  shell.md
doc/src/start/: index.md  install.md  stack.md  submit.md
doc/src/workflows/: advanced.md  collaboration.md  daily.md  index.md
doc/src/worktrees/: getting-started.md  index.md  management.md  shell-integration.md
docs/: config.md  metadata.md  recipes.md  shipping.md  tui.md  web.md  worktree.md
scripts/: stackit-shim.sh  sync-web-static.sh
testhelpers/: assertions.go  binary.go  git_repo.go  github_fixtures.go  github_mock.go  github_mock_client.go  scene.go
(+844 files in other folders)
