[project]
name = "stackit-docs"
description = "Documentation for stackit"
version = "0.1.0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "mkdocs-material[imaging]>=9.5.33",
    "markdown-exec[ansi]>=1.9.3",
    "mkdocs-redirects>=1.2.1",
    "mkdocs-llmstxt>=0.3.1",
    "mkdocs>=1.6.0",
    "cairosvg>=2.7.1",
    "pillow>=10.4.0",
]
